--- a/config_video.json
+++ b/config_video.json
@@ -1,6 +1,7 @@
 {
   "video_id": "Hfm94aHAbYQ",
-  "judul": "Tutorial Aplikasi Absensi V1",
+  "judul": "Tutorial Aplikasi Absensi V1 (COMING SOON - PROSES UPLOAD)",
   "tampilkan": true
 
 }
+
