--- a/config_video.json
+++ b/config_video.json
@@ -1,7 +1,8 @@
 {
-  "video_id": "Hfm94aHAbYQ",
+  "video_id": "x3McK1xRE9o",
   "judul": "Tutorial Aplikasi Absensi V1 (COMING SOON - PROSES UPLOAD)",
   "tampilkan": true
 
 }
+
 
