--- a/config_video.json
+++ b/config_video.json
@@ -1,8 +1,9 @@
 {
-  "video_id": "x3McK1xRE9o",
+  "video_id": "wcUug3zhNn0",
   "judul": "Tutorial Aplikasi Absensi V1 (COMING SOON - PROSES UPLOAD)",
   "tampilkan": true
 
 }
+
 
 
