--- a/config_video.json
+++ b/config_video.json
@@ -1,9 +1,10 @@
 {
   "video_id": "wcUug3zhNn0",
-  "judul": "Tutorial Aplikasi Absensi V1 (COMING SOON - PROSES UPLOAD)",
+  "judul": "Tutorial Penggunaan Aplikasi E-presensi V.1.5",
   "tampilkan": true
 
 }
+
 
 
 
